[package]
name = "pinv"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
clap = { version = "3.2.22", features = ["cargo", "derive", "unicode"] }
rusqlite = "0.28.0"
simple-error = "0.2.3"
directories = "4.0.1"
chrono = "0.4.22"
serial_test = "0.9.0"
csv = "1.1.6"
cursive = { version = "0.20.0", default-features = false, features = ["toml", "crossterm-backend"] }
lazy_static = "1.4.0"
regex = "1.6.0"  
libflate = "1.3.0"
